# AI-DecompVis

./: .gitignore  AGENT.md  CMakeLists.txt  LICENSE  README.md  requirements-dev.txt
.github/workflows/: ci.yml
apps/desktop-electron/: README.md  main.js  package.json  preload.js
apps/web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
core/: CMakeLists.txt
core/aidecomp_core/include/aidecomp_core/: analyzer.hpp  decoder.hpp  models.hpp  pe_loader.hpp
core/aidecomp_core/src/: analyzer.cpp  native_byte_image_decoder.cpp  objdump_image_decoder.cpp  pe_loader.cpp  x86_byte_decoder.cpp  x86_decoder.cpp
core/aidecomp_py/python/aidecomp_py/: __init__.py  adapter.py
core/aidecomp_py/src/: bindings.cpp
core/tests/: core_tests.cpp
docs/: analysis-pipeline.md  architecture.md  complex-control-flow.md  evidence-and-confidence.md  golden-corpus.md  ir-and-ssa.md  plugin-strategy.md  runtime-modes.md  type-recovery.md  user-guide.md  user-guided-reanalysis.md  vscode-plugin-workflow.md
plugins/ghidra/: README.md
plugins/ida/: README.md
plugins/vscode/: README.md  package-lock.json  package.json  tsconfig.json
samples/: demo_stack_branch.json
samples/real_pe/: real_pe_cpp_like_x64.json  real_pe_minimal_x64.json  real_pe_switch_x64.json  real_pe_unwind_x64.json
scripts/: build_core.sh  generate_real_pe_samples.py  run_api_daemon.sh  run_api_embedded.sh  run_daemon.sh  run_dev_stack.sh  test_core.sh
services/aidecompd/: aidecomp_runtime_pb2.py  aidecomp_runtime_pb2_grpc.py  server.py
shared/proto/: aidecomp_runtime.proto  aidecomp_service.proto
shared/schemas/: analysis.schema.json
tests/api/: test_api.py  test_daemon.py  test_daemon_e2e.py
tests/golden/: real_pe_cpp_like_x64.assertions.json  real_pe_minimal_x64.assertions.json  real_pe_switch_x64.assertions.json  real_pe_unwind_x64.assertions.json
tests/python/: test_golden_corpus.py  (+1 more)
(+28 files in other folders)
